// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spl Report Container basic data loading and display Displays project snapshot data 1`] = `
"<div class=\\"Toastify\\"></div>
<div class=\\"spl-reports\\">
  <div>
    <div class=\\"side-bar close\\"><span><span class=\\"d-flex justify-content-between align-items-center add-spl undefined\\"><h2>SPL Reports</h2><button type=\\"button\\" class=\\"h-auto btn btn-primary\\"><svg stroke=\\"currentColor\\" fill=\\"currentColor\\" stroke-width=\\"0\\" viewBox=\\"0 0 448 512\\" size=\\"20\\" height=\\"20\\" width=\\"20\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path d=\\"M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z\\"></path></svg></button></span>
      <div class=\\"sc-AxjAm jtcXvd active row\\">
        <div title=\\"report 1\\" class=\\"sc-AxirZ gtQOKE col-md-9\\">report 1</div>
        <div class=\\"sc-AxhCb bonQhK col-md-3\\"><input disabled=\\"\\" type=\\"checkbox\\" class=\\"sc-AxiKw cklZaN form-control\\">
          <div class=\\"elipsis-dropdown dropdown\\"><button aria-haspopup=\\"true\\" aria-expanded=\\"false\\" id=\\"1-elipsis-controls\\" type=\\"button\\" class=\\"dropdown-toggle elipsis elipsis-primary\\"><svg stroke=\\"currentColor\\" fill=\\"currentColor\\" stroke-width=\\"0\\" viewBox=\\"0 0 512 512\\" height=\\"1em\\" width=\\"1em\\" xmlns=\\"http://www.w3.org/2000/svg\\">
                <title>1-elipsis</title>
                <path d=\\"M328 256c0 39.8-32.2 72-72 72s-72-32.2-72-72 32.2-72 72-72 72 32.2 72 72zm104-72c-39.8 0-72 32.2-72 72s32.2 72 72 72 72-32.2 72-72-32.2-72-72-72zm-352 0c-39.8 0-72 32.2-72 72s32.2 72 72 72 72-32.2 72-72-32.2-72-72-72z\\"></path>
              </svg></button></div>
        </div>
      </div>
      <div class=\\"sc-AxjAm jtcXvd active row\\">
        <div title=\\"report 2\\" class=\\"sc-AxirZ gtQOKE col-md-9\\">report 2</div>
        <div class=\\"sc-AxhCb bonQhK col-md-3\\"><input disabled=\\"\\" type=\\"checkbox\\" class=\\"sc-AxiKw cklZaN form-control\\">
          <div class=\\"elipsis-dropdown dropdown\\"><button aria-haspopup=\\"true\\" aria-expanded=\\"false\\" id=\\"1-elipsis-controls\\" type=\\"button\\" class=\\"dropdown-toggle elipsis elipsis-primary\\"><svg stroke=\\"currentColor\\" fill=\\"currentColor\\" stroke-width=\\"0\\" viewBox=\\"0 0 512 512\\" height=\\"1em\\" width=\\"1em\\" xmlns=\\"http://www.w3.org/2000/svg\\">
                <title>1-elipsis</title>
                <path d=\\"M328 256c0 39.8-32.2 72-72 72s-72-32.2-72-72 32.2-72 72-72 72 32.2 72 72zm104-72c-39.8 0-72 32.2-72 72s32.2 72 72 72 72-32.2 72-72-32.2-72-72-72zm-352 0c-39.8 0-72 32.2-72 72s32.2 72 72 72 72-32.2 72-72-32.2-72-72-72z\\"></path>
              </svg></button></div>
        </div>
      </div></span><button><svg stroke=\\"currentColor\\" fill=\\"currentColor\\" stroke-width=\\"0\\" viewBox=\\"0 0 320 512\\" height=\\"1em\\" width=\\"1em\\" xmlns=\\"http://www.w3.org/2000/svg\\">
          <path d=\\"M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z\\"></path>
        </svg></button>
    </div>
  </div>
  <div class=\\"ml-4 report-content\\">
    <form action=\\"#\\" class=\\"report-form m-0 flex-nowrap\\"><span class=\\"d-flex justify-content-between align-items-center add-spl undefined\\"><h2>SPL Reports</h2><button type=\\"button\\" class=\\"h-auto btn btn-primary\\"><svg stroke=\\"currentColor\\" fill=\\"currentColor\\" stroke-width=\\"0\\" viewBox=\\"0 0 448 512\\" size=\\"20\\" height=\\"20\\" width=\\"20\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path d=\\"M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z\\"></path></svg></button></span>
      <div class=\\"d-flex align-items-center row no-gutters\\">
        <div class=\\"ml-2 form-group\\"><label class=\\"form-label\\">From: N/A</label></div>
        <div class=\\"form-group\\"><label class=\\"form-label\\" for=\\"input-to\\">To:</label><input disabled=\\"\\" type=\\"input\\" id=\\"input-to\\" class=\\"form-control\\" value=\\"\\"></div><button type=\\"reset\\" class=\\"Button Button--icon-only mr-3 btn btn-light\\">
          <div class=\\"Button__icon\\"><svg stroke=\\"currentColor\\" fill=\\"currentColor\\" stroke-width=\\"0\\" viewBox=\\"0 0 512 512\\" size=\\"20\\" height=\\"20\\" width=\\"20\\" xmlns=\\"http://www.w3.org/2000/svg\\">
              <title>refresh-button</title>
              <path d=\\"M370.72 133.28C339.458 104.008 298.888 87.962 255.848 88c-77.458.068-144.328 53.178-162.791 126.85-1.344 5.363-6.122 9.15-11.651 9.15H24.103c-7.498 0-13.194-6.807-11.807-14.176C33.933 94.924 134.813 8 256 8c66.448 0 126.791 26.136 171.315 68.685L463.03 40.97C478.149 25.851 504 36.559 504 57.941V192c0 13.255-10.745 24-24 24H345.941c-21.382 0-32.09-25.851-16.971-40.971l41.75-41.749zM32 296h134.059c21.382 0 32.09 25.851 16.971 40.971l-41.75 41.75c31.262 29.273 71.835 45.319 114.876 45.28 77.418-.07 144.315-53.144 162.787-126.849 1.344-5.363 6.122-9.15 11.651-9.15h57.304c7.498 0 13.194 6.807 11.807 14.176C478.067 417.076 377.187 504 256 504c-66.448 0-126.791-26.136-171.315-68.685L48.97 471.03C33.851 486.149 8 475.441 8 454.059V320c0-13.255 10.745-24 24-24z\\"></path>
            </svg></div>
        </button>
        <div class=\\"form-group\\"><label class=\\"form-label\\" for=\\"input-name\\">Name:</label><input name=\\"name\\" id=\\"input-name\\" class=\\"form-control\\" value=\\"report 1\\"></div>
        <div class=\\"form-group\\">
          <div class=\\"check-field\\"><label class=\\"form-label\\" for=\\"input-isFinal\\">Is Final:</label>
            <div class=\\"form-check\\"><input name=\\"isFinal\\" type=\\"checkbox\\" id=\\"input-isFinal\\" class=\\"form-check-input position-static\\" value=\\"false\\"></div>
          </div>
        </div><button disabled=\\"\\" type=\\"submit\\" class=\\"Button Button--disabled h-75 mr-auto btn btn-primary\\">
          <div class=\\"Button__value\\">Save</div>
        </button><button type=\\"button\\" class=\\"Button sc-fzqBkg khMyYx btn btn-primary\\">
          <div class=\\"Button__value\\"><svg stroke=\\"currentColor\\" fill=\\"currentColor\\" stroke-width=\\"0\\" viewBox=\\"0 0 384 512\\" size=\\"36\\" height=\\"36\\" width=\\"36\\" xmlns=\\"http://www.w3.org/2000/svg\\">
              <path d=\\"M224 136V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V160H248c-13.2 0-24-10.8-24-24zm60.1 106.5L224 336l60.1 93.5c5.1 8-.6 18.5-10.1 18.5h-34.9c-4.4 0-8.5-2.4-10.6-6.3C208.9 405.5 192 373 192 373c-6.4 14.8-10 20-36.6 68.8-2.1 3.9-6.1 6.3-10.5 6.3H110c-9.5 0-15.2-10.5-10.1-18.5l60.3-93.5-60.3-93.5c-5.2-8 .6-18.5 10.1-18.5h34.8c4.4 0 8.5 2.4 10.6 6.3 26.1 48.8 20 33.6 36.6 68.5 0 0 6.1-11.7 36.6-68.5 2.1-3.9 6.2-6.3 10.6-6.3H274c9.5-.1 15.2 10.4 10.1 18.4zM384 121.9v6.1H256V0h6.1c6.4 0 12.5 2.5 17 7l97.9 98c4.5 4.5 7 10.6 7 16.9z\\"></path>
            </svg></div>
        </button><button type=\\"button\\" class=\\"Button sc-fzqBkg khMyYx btn btn-primary\\">
          <div class=\\"Button__value\\"><svg stroke=\\"currentColor\\" fill=\\"currentColor\\" stroke-width=\\"0\\" viewBox=\\"0 0 384 512\\" size=\\"36\\" height=\\"36\\" width=\\"36\\" xmlns=\\"http://www.w3.org/2000/svg\\">
              <path d=\\"M224 136V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V160H248c-13.2 0-24-10.8-24-24zm64 236c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12v8zm0-64c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12v8zm0-72v8c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12zm96-114.1v6.1H256V0h6.1c6.4 0 12.5 2.5 17 7l97.9 98c4.5 4.5 7 10.6 7 16.9z\\"></path>
            </svg></div>
        </button>
      </div>
    </form>
    <div role=\\"table\\" class=\\"table\\">
      <div class=\\"thead thead-light\\">
        <div role=\\"row\\" style=\\"display: flex; flex: 1 0 auto; min-width: 965px;\\" class=\\"tr\\">
          <div colspan=\\"1\\" role=\\"columnheader\\" style=\\"box-sizing: border-box; flex: 65 0 auto; min-width: 65px; width: 3.5%; justify-content: flex-start; text-align: left; align-items: center; display: flex;\\" width=\\"3.5%\\" class=\\"th\\">SPP No.</div>
          <div colspan=\\"1\\" role=\\"columnheader\\" style=\\"box-sizing: border-box; flex: 50 0 auto; min-width: 50px; width: 50px; justify-content: flex-start; text-align: left; align-items: center; display: flex;\\" class=\\"th\\">Fiscal Year</div>
          <div colspan=\\"1\\" role=\\"columnheader\\" style=\\"box-sizing: border-box; flex: 50 0 auto; min-width: 50px; width: 50px; justify-content: flex-start; text-align: left; align-items: center; display: flex;\\" class=\\"th\\">Agency</div>
          <div colspan=\\"1\\" role=\\"columnheader\\" style=\\"box-sizing: border-box; flex: 80 0 auto; min-width: 80px; width: 7%; justify-content: flex-start; text-align: left; align-items: center; display: flex;\\" width=\\"7%\\" class=\\"th\\">Name</div>
          <div colspan=\\"1\\" role=\\"columnheader\\" style=\\"box-sizing: border-box; flex: 80 0 auto; min-width: 80px; width: 3.5%; justify-content: flex-end; text-align: right; align-items: center; display: flex;\\" width=\\"3.5%\\" class=\\"th\\">CMV</div>
          <div colspan=\\"1\\" role=\\"columnheader\\" style=\\"box-sizing: border-box; flex: 80 0 auto; min-width: 80px; width: 3.5%; justify-content: flex-end; text-align: right; align-items: center; display: flex;\\" width=\\"3.5%\\" class=\\"th\\">NBV</div>
          <div colspan=\\"1\\" role=\\"columnheader\\" style=\\"box-sizing: border-box; flex: 80 0 auto; min-width: 80px; width: 3.5%; justify-content: flex-end; text-align: right; align-items: center; display: flex;\\" width=\\"3.5%\\" class=\\"th\\">Sales Cost</div>
          <div colspan=\\"1\\" role=\\"columnheader\\" style=\\"box-sizing: border-box; flex: 80 0 auto; min-width: 80px; width: 3.5%; justify-content: flex-end; text-align: right; align-items: center; display: flex;\\" width=\\"3.5%\\" class=\\"th\\">Program Cost</div>
          <div colspan=\\"1\\" role=\\"columnheader\\" style=\\"box-sizing: border-box; flex: 80 0 auto; min-width: 80px; width: 3.5%; justify-content: flex-end; text-align: right; align-items: center; display: flex;\\" width=\\"3.5%\\" class=\\"th\\">Gain Loss</div>
          <div colspan=\\"1\\" role=\\"columnheader\\" style=\\"box-sizing: border-box; flex: 80 0 auto; min-width: 80px; width: 3.5%; justify-content: flex-end; text-align: right; align-items: center; display: flex;\\" width=\\"3.5%\\" class=\\"th\\">OCG Fin. Stmts.</div>
          <div colspan=\\"1\\" role=\\"columnheader\\" style=\\"box-sizing: border-box; flex: 80 0 auto; min-width: 80px; width: 3.5%; justify-content: flex-end; text-align: right; align-items: center; display: flex;\\" width=\\"3.5%\\" class=\\"th\\">Interest Comp.</div>
          <div colspan=\\"1\\" role=\\"columnheader\\" style=\\"box-sizing: border-box; flex: 80 0 auto; min-width: 80px; width: 3.5%; justify-content: flex-end; text-align: right; align-items: center; display: flex;\\" width=\\"3.5%\\" class=\\"th\\">Net Proceeds</div>
          <div colspan=\\"1\\" role=\\"columnheader\\" style=\\"box-sizing: border-box; flex: 80 0 auto; min-width: 80px; width: 3.5%; justify-content: flex-end; text-align: right; align-items: center; display: flex;\\" width=\\"3.5%\\" class=\\"th\\">Baseline Integrity</div>
        </div>
      </div>
      <div class=\\"tbody\\" role=\\"rowgroup\\">
        <div class=\\"tr-wrapper\\">
          <div role=\\"row\\" style=\\"display: flex; flex: 1 0 auto; min-width: 965px;\\" class=\\"tr\\">
            <div role=\\"cell\\" style=\\"box-sizing: border-box; flex: 65 0 auto; min-width: 65px; width: 3.5%; justify-content: flex-start; text-align: left; align-items: flex-start; display: flex;\\" width=\\"3.5%\\" title=\\"\\" class=\\"td\\"></div>
            <div role=\\"cell\\" style=\\"box-sizing: border-box; flex: 50 0 auto; min-width: 50px; width: 50px; justify-content: flex-start; text-align: left; align-items: flex-start; display: flex;\\" title=\\"\\" class=\\"td\\">20/21</div>
            <div role=\\"cell\\" style=\\"box-sizing: border-box; flex: 50 0 auto; min-width: 50px; width: 50px; justify-content: flex-start; text-align: left; align-items: flex-start; display: flex;\\" title=\\"\\" class=\\"td\\"></div>
            <div role=\\"cell\\" style=\\"box-sizing: border-box; flex: 80 0 auto; min-width: 80px; width: 7%; justify-content: flex-start; text-align: left; align-items: flex-start; display: flex;\\" width=\\"7%\\" title=\\"\\" class=\\"td\\"></div>
            <div role=\\"cell\\" style=\\"box-sizing: border-box; flex: 80 0 auto; min-width: 80px; width: 3.5%; justify-content: flex-end; text-align: right; align-items: flex-start; display: flex;\\" width=\\"3.5%\\" title=\\"\\" class=\\"td\\">$3</div>
            <div role=\\"cell\\" style=\\"box-sizing: border-box; flex: 80 0 auto; min-width: 80px; width: 3.5%; justify-content: flex-end; text-align: right; align-items: flex-start; display: flex;\\" width=\\"3.5%\\" title=\\"\\" class=\\"td\\">$6</div>
            <div role=\\"cell\\" style=\\"box-sizing: border-box; flex: 80 0 auto; min-width: 80px; width: 3.5%; justify-content: flex-end; text-align: right; align-items: flex-start; display: flex;\\" width=\\"3.5%\\" title=\\"\\" class=\\"td\\">$11</div>
            <div role=\\"cell\\" style=\\"box-sizing: border-box; flex: 80 0 auto; min-width: 80px; width: 3.5%; justify-content: flex-end; text-align: right; align-items: flex-start; display: flex;\\" width=\\"3.5%\\" title=\\"\\" class=\\"td\\">$9</div>
            <div role=\\"cell\\" style=\\"box-sizing: border-box; flex: 80 0 auto; min-width: 80px; width: 3.5%; justify-content: flex-end; text-align: right; align-items: flex-start; display: flex;\\" width=\\"3.5%\\" title=\\"\\" class=\\"td\\">$4</div>
            <div role=\\"cell\\" style=\\"box-sizing: border-box; flex: 80 0 auto; min-width: 80px; width: 3.5%; justify-content: flex-end; text-align: right; align-items: flex-start; display: flex;\\" width=\\"3.5%\\" title=\\"\\" class=\\"td\\">$8</div>
            <div role=\\"cell\\" style=\\"box-sizing: border-box; flex: 80 0 auto; min-width: 80px; width: 3.5%; justify-content: flex-end; text-align: right; align-items: flex-start; display: flex;\\" width=\\"3.5%\\" title=\\"\\" class=\\"td\\">$5</div>
            <div role=\\"cell\\" style=\\"box-sizing: border-box; flex: 80 0 auto; min-width: 80px; width: 3.5%; justify-content: flex-end; text-align: right; align-items: flex-start; display: flex;\\" width=\\"3.5%\\" title=\\"\\" class=\\"td\\">$7</div>
            <div role=\\"cell\\" style=\\"box-sizing: border-box; flex: 80 0 auto; min-width: 80px; width: 3.5%; justify-content: flex-end; text-align: right; align-items: flex-start; display: flex;\\" width=\\"3.5%\\" title=\\"\\" class=\\"td\\">$2</div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class=\\"container\\"></div>
  <div class=\\"container\\"></div>
</div>,"
`;

exports[`Spl Report Container basic data loading and display Matches snapshot 1`] = `
"<div class=\\"Toastify\\"></div>
<div class=\\"spl-reports\\">
  <div>
    <div class=\\"side-bar side-bar-show open\\"><span><span class=\\"d-flex justify-content-between align-items-center add-spl undefined\\"><h2>SPL Reports</h2><button type=\\"button\\" class=\\"h-auto btn btn-primary\\"><svg stroke=\\"currentColor\\" fill=\\"currentColor\\" stroke-width=\\"0\\" viewBox=\\"0 0 448 512\\" size=\\"20\\" height=\\"20\\" width=\\"20\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path d=\\"M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z\\"></path></svg></button></span></span><button><svg stroke=\\"currentColor\\" fill=\\"currentColor\\" stroke-width=\\"0\\" viewBox=\\"0 0 320 512\\" height=\\"1em\\" width=\\"1em\\" xmlns=\\"http://www.w3.org/2000/svg\\">
          <path d=\\"M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z\\"></path>
        </svg></button></div>
  </div>
  <div class=\\"ml-4 report-content\\">
    <form action=\\"#\\" class=\\"report-form m-0 flex-nowrap\\"><span class=\\"d-flex justify-content-between align-items-center add-spl undefined\\"><h2>SPL Reports</h2><button type=\\"button\\" class=\\"h-auto btn btn-primary\\"><svg stroke=\\"currentColor\\" fill=\\"currentColor\\" stroke-width=\\"0\\" viewBox=\\"0 0 448 512\\" size=\\"20\\" height=\\"20\\" width=\\"20\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path d=\\"M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z\\"></path></svg></button></span>
      <div class=\\"d-flex align-items-center row no-gutters\\">
        <div class=\\"ml-2 form-group\\"><label class=\\"form-label\\">From: N/A</label></div>
        <div class=\\"form-group\\"><label class=\\"form-label\\" for=\\"input-to\\">To:</label><input disabled=\\"\\" type=\\"input\\" id=\\"input-to\\" class=\\"form-control\\" value=\\"\\"></div><button type=\\"reset\\" class=\\"Button Button--icon-only mr-3 btn btn-light\\">
          <div class=\\"Button__icon\\"><svg stroke=\\"currentColor\\" fill=\\"currentColor\\" stroke-width=\\"0\\" viewBox=\\"0 0 512 512\\" size=\\"20\\" height=\\"20\\" width=\\"20\\" xmlns=\\"http://www.w3.org/2000/svg\\">
              <title>refresh-button</title>
              <path d=\\"M370.72 133.28C339.458 104.008 298.888 87.962 255.848 88c-77.458.068-144.328 53.178-162.791 126.85-1.344 5.363-6.122 9.15-11.651 9.15H24.103c-7.498 0-13.194-6.807-11.807-14.176C33.933 94.924 134.813 8 256 8c66.448 0 126.791 26.136 171.315 68.685L463.03 40.97C478.149 25.851 504 36.559 504 57.941V192c0 13.255-10.745 24-24 24H345.941c-21.382 0-32.09-25.851-16.971-40.971l41.75-41.749zM32 296h134.059c21.382 0 32.09 25.851 16.971 40.971l-41.75 41.75c31.262 29.273 71.835 45.319 114.876 45.28 77.418-.07 144.315-53.144 162.787-126.849 1.344-5.363 6.122-9.15 11.651-9.15h57.304c7.498 0 13.194 6.807 11.807 14.176C478.067 417.076 377.187 504 256 504c-66.448 0-126.791-26.136-171.315-68.685L48.97 471.03C33.851 486.149 8 475.441 8 454.059V320c0-13.255 10.745-24 24-24z\\"></path>
            </svg></div>
        </button>
        <div class=\\"form-group\\"><label class=\\"form-label\\" for=\\"input-name\\">Name:</label><input name=\\"name\\" id=\\"input-name\\" class=\\"form-control\\" value=\\"\\"></div>
        <div class=\\"form-group\\">
          <div class=\\"check-field\\"><label class=\\"form-label\\" for=\\"input-isFinal\\">Is Final:</label>
            <div class=\\"form-check\\"><input name=\\"isFinal\\" type=\\"checkbox\\" id=\\"input-isFinal\\" class=\\"form-check-input position-static\\" value=\\"false\\"></div>
          </div>
        </div><button disabled=\\"\\" type=\\"submit\\" class=\\"Button Button--disabled h-75 mr-auto btn btn-primary\\">
          <div class=\\"Button__value\\">Save</div>
        </button><button type=\\"button\\" class=\\"Button sc-fzqBkg khMyYx btn btn-primary\\">
          <div class=\\"Button__value\\"><svg stroke=\\"currentColor\\" fill=\\"currentColor\\" stroke-width=\\"0\\" viewBox=\\"0 0 384 512\\" size=\\"36\\" height=\\"36\\" width=\\"36\\" xmlns=\\"http://www.w3.org/2000/svg\\">
              <path d=\\"M224 136V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V160H248c-13.2 0-24-10.8-24-24zm60.1 106.5L224 336l60.1 93.5c5.1 8-.6 18.5-10.1 18.5h-34.9c-4.4 0-8.5-2.4-10.6-6.3C208.9 405.5 192 373 192 373c-6.4 14.8-10 20-36.6 68.8-2.1 3.9-6.1 6.3-10.5 6.3H110c-9.5 0-15.2-10.5-10.1-18.5l60.3-93.5-60.3-93.5c-5.2-8 .6-18.5 10.1-18.5h34.8c4.4 0 8.5 2.4 10.6 6.3 26.1 48.8 20 33.6 36.6 68.5 0 0 6.1-11.7 36.6-68.5 2.1-3.9 6.2-6.3 10.6-6.3H274c9.5-.1 15.2 10.4 10.1 18.4zM384 121.9v6.1H256V0h6.1c6.4 0 12.5 2.5 17 7l97.9 98c4.5 4.5 7 10.6 7 16.9z\\"></path>
            </svg></div>
        </button><button type=\\"button\\" class=\\"Button sc-fzqBkg khMyYx btn btn-primary\\">
          <div class=\\"Button__value\\"><svg stroke=\\"currentColor\\" fill=\\"currentColor\\" stroke-width=\\"0\\" viewBox=\\"0 0 384 512\\" size=\\"36\\" height=\\"36\\" width=\\"36\\" xmlns=\\"http://www.w3.org/2000/svg\\">
              <path d=\\"M224 136V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V160H248c-13.2 0-24-10.8-24-24zm64 236c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12v8zm0-64c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12v8zm0-72v8c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12zm96-114.1v6.1H256V0h6.1c6.4 0 12.5 2.5 17 7l97.9 98c4.5 4.5 7 10.6 7 16.9z\\"></path>
            </svg></div>
        </button>
      </div>
    </form>
    <div role=\\"table\\" class=\\"table\\">
      <div class=\\"thead thead-light\\">
        <div role=\\"row\\" style=\\"display: flex; flex: 1 0 auto; min-width: 965px;\\" class=\\"tr\\">
          <div colspan=\\"1\\" role=\\"columnheader\\" style=\\"box-sizing: border-box; flex: 65 0 auto; min-width: 65px; width: 3.5%; justify-content: flex-start; text-align: left; align-items: center; display: flex;\\" width=\\"3.5%\\" class=\\"th\\">SPP No.</div>
          <div colspan=\\"1\\" role=\\"columnheader\\" style=\\"box-sizing: border-box; flex: 50 0 auto; min-width: 50px; width: 50px; justify-content: flex-start; text-align: left; align-items: center; display: flex;\\" class=\\"th\\">Fiscal Year</div>
          <div colspan=\\"1\\" role=\\"columnheader\\" style=\\"box-sizing: border-box; flex: 50 0 auto; min-width: 50px; width: 50px; justify-content: flex-start; text-align: left; align-items: center; display: flex;\\" class=\\"th\\">Agency</div>
          <div colspan=\\"1\\" role=\\"columnheader\\" style=\\"box-sizing: border-box; flex: 80 0 auto; min-width: 80px; width: 7%; justify-content: flex-start; text-align: left; align-items: center; display: flex;\\" width=\\"7%\\" class=\\"th\\">Name</div>
          <div colspan=\\"1\\" role=\\"columnheader\\" style=\\"box-sizing: border-box; flex: 80 0 auto; min-width: 80px; width: 3.5%; justify-content: flex-end; text-align: right; align-items: center; display: flex;\\" width=\\"3.5%\\" class=\\"th\\">CMV</div>
          <div colspan=\\"1\\" role=\\"columnheader\\" style=\\"box-sizing: border-box; flex: 80 0 auto; min-width: 80px; width: 3.5%; justify-content: flex-end; text-align: right; align-items: center; display: flex;\\" width=\\"3.5%\\" class=\\"th\\">NBV</div>
          <div colspan=\\"1\\" role=\\"columnheader\\" style=\\"box-sizing: border-box; flex: 80 0 auto; min-width: 80px; width: 3.5%; justify-content: flex-end; text-align: right; align-items: center; display: flex;\\" width=\\"3.5%\\" class=\\"th\\">Sales Cost</div>
          <div colspan=\\"1\\" role=\\"columnheader\\" style=\\"box-sizing: border-box; flex: 80 0 auto; min-width: 80px; width: 3.5%; justify-content: flex-end; text-align: right; align-items: center; display: flex;\\" width=\\"3.5%\\" class=\\"th\\">Program Cost</div>
          <div colspan=\\"1\\" role=\\"columnheader\\" style=\\"box-sizing: border-box; flex: 80 0 auto; min-width: 80px; width: 3.5%; justify-content: flex-end; text-align: right; align-items: center; display: flex;\\" width=\\"3.5%\\" class=\\"th\\">Gain Loss</div>
          <div colspan=\\"1\\" role=\\"columnheader\\" style=\\"box-sizing: border-box; flex: 80 0 auto; min-width: 80px; width: 3.5%; justify-content: flex-end; text-align: right; align-items: center; display: flex;\\" width=\\"3.5%\\" class=\\"th\\">OCG Fin. Stmts.</div>
          <div colspan=\\"1\\" role=\\"columnheader\\" style=\\"box-sizing: border-box; flex: 80 0 auto; min-width: 80px; width: 3.5%; justify-content: flex-end; text-align: right; align-items: center; display: flex;\\" width=\\"3.5%\\" class=\\"th\\">Interest Comp.</div>
          <div colspan=\\"1\\" role=\\"columnheader\\" style=\\"box-sizing: border-box; flex: 80 0 auto; min-width: 80px; width: 3.5%; justify-content: flex-end; text-align: right; align-items: center; display: flex;\\" width=\\"3.5%\\" class=\\"th\\">Net Proceeds</div>
          <div colspan=\\"1\\" role=\\"columnheader\\" style=\\"box-sizing: border-box; flex: 80 0 auto; min-width: 80px; width: 3.5%; justify-content: flex-end; text-align: right; align-items: center; display: flex;\\" width=\\"3.5%\\" class=\\"th\\">Baseline Integrity</div>
        </div>
      </div>
      <div class=\\"no-rows-message\\">No Reports Available</div>
    </div>
  </div>
  <div class=\\"container\\"></div>
  <div class=\\"container\\"></div>
</div>,"
`;
